# tree_menu

./: README.md  docker-compose.yaml  main_data.json  pyproject.toml
config/: settings.py  urls.py
main/: admin.py  models.py  urls.py  views.py
main/management/commands/: create_admin.py
main/migrations/: 0001_initial.py  0002_alter_item_options_item_level.py
main/templates/main/: base.html  menu_detail.html  menu_list.html
main/templates/main/includes/: items.html
main/templatetags/: main_tags.py
